# pysmo

./: .git-blame-ignore-revs  .gitignore  .mise.toml  .readthedocs.yml  .travis.yml  404.html  CHANGELOG.md  CNAME  MIGRATION_TO_PANDAS.md  Makefile  Pipfile  README.md  changelog.md  cliff.toml  contributors.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-travis.txt  requirements.txt  setup.py  sitemap.xml  tox.ini  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json  postAttachCommand.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  gh-pages.yml  pull-request-links.yaml  release.yml  run-tests.yml
api/: index.html
api/pysmo/classes/: index.html
api/pysmo/functions/: index.html
api/pysmo/lib/: index.html
api/pysmo/tools/: index.html
changelog/: index.html
contributors/: index.html
developing/: index.html
developing/contributing/: index.html
developing/developing/: index.html
developing/types-more/: index.html
docs/: conftest.py  index.md  requirements.txt
docs/api/: index.md  pysmo.md
docs/developing/: contributing.md  contributors.md  developing.md  index.md  types-more.md
docs/development/: contributing.md  contributors.md  developing.md  environment.md  index.md  style.md  testing.md
docs/first-steps/: faq.md  faqs.md  index.md  installation.md  tutorial.ipynb  tutorial.md
docs/gallery/: gallery.md  index.md  noise.md
docs/images/: hypothetical_file.drawio  hypothetical_file2.drawio  typical_class.drawio
docs/macros/: main.py
docs/reference/: _io.md  base.md  classes.md  functions.md  tools.md
docs/snippets/: double_delta.py  double_delta_generic.py  double_delta_mini.py  double_delta_td.py  duck.py  duck_protocol.py  example_class.py  functions.py  gcd_pysmo.py  gcd_traditional.py  mini-example.py  protocol_options.py  read_sacfile.py  read_sacfile2.py  sample_init.py  signup.py  test_functions.py  testfile.sac
docs/source/: classes.md  conf.py  contrib.rst  contributing.md  developing.md  developing.rst  examples.md  files.rst  functions.md  functions.rst  fundamentals.rst  gallery.md  in-the-box.md  index.md  index.rst  installation.md  installation.rst  intro.rst  modules.rst  not-so-fast.md  not-so-fast.rst  problem-statement.md  protocols.rst  pysmo.rst  pysmo.sac.rst  pysmo.tools.noise.rst  pysmo.tools.rst  rationale.md  rules-of-the-land.md  sac.rst  tools.md  tools.rst  tutorial.ipynb  types-more.md  types.md
docs/usage/: conventions.md  external-classes.md  functions.md  in-the-box.md  index.md  mini-classes.md  motivation.md  types.md
docs/user-guide/: classes.md  functions.md  in-the-box.md  index.md  rationale.md  types.md
first-steps/: index.html
first-steps/installation/: index.html
first-steps/tutorial/: calc_gcd_from_floats.py  calc_gcd_pysmo.py  index.html  tutorial_seismogram_pysmo.py
gallery/: index.html
gallery/gallery/: index.html
gallery/noise/: index.html
images/: protocols.drawio  pysmo_benefits.drawio  pysmo_layer.drawio
pysmo/: README.md  __init__.py  conftest.py  functions.py  types.py
pysmo/_io/: README.md  __init__.py  sacio.py
pysmo/_lib/: decorators.py  defaults.py  functions.py  utils.py
pysmo/_types/: __init__.py  _event.py  _hypocenter.py  _location.py  _location_with_depth.py  _seismogram.py  _station.py
pysmo/classes/: README.md  __init__.py  _sac.py  mini.py  sac.py
pysmo/core/: __init__.py  protocols.py  types.py
pysmo/functions/: README.md  __init__.py  _location.py  _seismogram.py  _utils.py  azdist.py  detrend.py  filter_butter.py  filter_gauss.py  normalize.py  plotseis.py  resample.py  xcorr.py
pysmo/io/: README.md  __init__.py
pysmo/lib/: README.md  __init__.py  decorators.py  defaults.py  exceptions.py  functions.py  typing.py  validators.py
pysmo/sac/: __init__.py  sacfunc.py  sacheader.py  sacheader.yml  sacio.py  sacmeth.py
pysmo/tools/: __init__.py  azdist.py  noise.py  plotseis.py  plotutils.py  signal.py  utils.py
reference/_io/: index.html
reference/base/: index.html
reference/classes/: index.html
reference/functions/: index.html
reference/tools/: index.html
search/: search_index.json
snippets/: city.py  division_annotated.py  double_delta.py  double_delta_float.py  double_delta_generic.py  double_delta_mini.py  duck.py  duck_protocol.py  gcd_pysmo.py  gcd_traditional.py  protocol_options.py  read_sacfile.py  read_sacfile2.py  signup2.py  test_functions.py
snippets/duck/: index.html
snippets/duck_protocol/: index.html
snippets/example_class/: index.html
snippets/functions/: index.html
snippets/protocol_options/: index.html
snippets/sample_init/: index.html
snippets/test_functions/: index.html
src/pysmo/: __init__.py  _utils.py  conftest.py  typing.py
tests/: conftest.py  list_headers_with_sac.sh  run_tests.py  test_functions.py  test_functions_2.py  test_helpers.py  test_mini_protocols.py  test_normalize.py  test_sac_protocols.py  test_sacfunc.py  test_sacio.py  testfile.sac
tests/assets/: funcgen6.ascii  funcgen7.ascii  funcgen7.sac  testfile_iztype_is_IB.sac
tests/cases/: __init__.py  seismogram_cases.py
tests/classes/: test_mini.py  test_sac.py
tests/functions/: conftest.py  test_azdist.py  test_detrend.py  test_filter_butter.py  test_filter_gauss.py  test_functions.py  test_normalize.py  test_plotseis.py  test_resample.py  test_seismogram.py  test_seismogram_cases.py  test_utils.py  test_xcorr.py
tests/io/: conftest.py  test_sacio.py
tests/lib/: test_decorators.py  test_mini_utils.py  test_typing.py
tests/tools/: test_azdist.py  test_iccs.py  test_noise.py  test_plotseis.py  test_plotutils.py  test_signal.py  test_tools_utils.py
user-guide/: index.html
user-guide/classes/: index.html
user-guide/functions/: index.html
user-guide/in-the-box/: index.html
user-guide/rationale/: index.html
user-guide/tools/: index.html
user-guide/types/: index.html
utils/: README.md  _lib.py  gen_literals.py  print_sac_headers.py  render_sacio.py  sacheader.yml  sacio-template.py.j2
utils/templates/: sacio-template.py  sacio-template.py.j2
(+199 files in other folders)
