[tool.poetry]
name = "pysmo"
version = "1.0.0-dev1"
description = "Python module for seismologists."
readme = "README.md"
authors = ["Simon M. Lloyd <simon@slloyd.net>"]
license = "GPL-3.0-or-later"
documentation = "https://docs.pysmo.org"
packages = [
   {include = "pysmo"},
]
exclude = [
    "tests",
    "docs",
    "utils",
    "site",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
scipy = "^1.15.2"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pyproj = "^3.7.1"
requests = "^2.32.3"
attrs = "^25.3.0"
attrs-strict = "^1.0.1"
scipy-stubs = "^1.15.2.1"
types-requests = "^2.32.0.20250306"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20241230"
jinja2 = "^3.1.6"
black = {extras = ["jupyter"], version = "^25.1.0"}
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mpl = "^0.17.0"
pytest-cov = "^6.0.0"
pytest-mypy = "^0.10.3"
pytest-depends = "^1.0.1"
pytest-sugar = "^1.0.0"
nbmake = "^1.5.5"
pytest-cases = "^3.8.6"
ruff = "^0.11.2"

[tool.poetry.group.docs.dependencies]
ipython = "^8.29.0"
mkdocs-material = "^9.5.44"
markdown-include = "^0.8.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-jupyter = "^0.25.1"
termynal = "^0.12.2"
jupyterlab = "^4.3.1"
griffe-fieldz = "^0.2.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
namespace_packages = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "plt.show()",
    "plt.savefig(.*)",
    ]

[tool.black]
target-version = [
  "py312",
  "py313",
]

[tool.ruff]
line-length = 88
extend-exclude = ["utils/templates"]

[tool.ruff.lint.per-file-ignores]
"pysmo/_io/sacio.py" = ["E741"]

# [lint.extend-per-file-ignores]
# "docs/snippets/*" = ["E402"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
