[project]
name = "pysmo"
version = "1.0.0-dev1"
description = "Python module for seismologists."
authors = [{ name = "Simon M. Lloyd", email = "simon@slloyd.net" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "scipy>=1.15.2,<2",
    "numpy>=2.2.4,<3",
    "matplotlib>=3.10.1,<4",
    "pyproj>=3.7.1,<4",
    "requests>=2.32.3,<3",
    "attrs>=25.3.0,<26",
    "attrs-strict>=1.0.1,<2",
    "scipy-stubs>=1.15.2.1,<2",
    "types-requests>=2.32.0.20250328,<3",
    "cattrs>=25.1.1,<26",
]

[project.urls]
Documentation = "https://docs.pysmo.org"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250326,<7",
    "jinja2>=3.1.6,<4",
    "black[jupyter]>=25.1.0,<26",
    "pyyaml>=6.0.2,<7",
]
test = [
    "pytest>=8.3.5,<9",
    "pytest-mpl>=0.17.0,<0.18",
    "pytest-cov>=6.0.0,<7",
    "pytest-mypy>=1.0.0,<2",
    "pytest-depends>=1.0.1,<2",
    "pytest-sugar>=1.0.0,<2",
    "nbmake>=1.5.5,<2",
    "pytest-cases>=3.8.6,<4",
    "ruff>=0.11.2,<0.12",
    "sybil[pytest]>=9.1.0,<10",
]
docs = [
    "ipython>=9.0.2,<10",
    "mkdocs-material>=9.6.18,<10",
    "markdown-include>=0.8.1,<0.9",
    "mkdocstrings[python]>=0.29.1,<0.30",
    "mkdocs-jupyter>=0.25.1,<0.26",
    "termynal>=0.13.0,<0.14",
    "jupyterlab>=4.3.6,<5",
    "griffe-fieldz>=0.2.1,<0.3",
    "mkdocs-bibtex>=4.4.0,<5",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["pysmo"]
exclude = [
    "tests",
    "docs",
    "utils",
    "site",
]

[tool.hatch.build.targets.wheel]
include = ["pysmo"]
exclude = [
    "tests",
    "docs",
    "utils",
    "site",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "pysmo",
    "docs"
]
mpl-generate-summary = "html"
mpl-use-full-test-name = true
addopts = "-p no:doctest"

[tool.mypy]
namespace_packages = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
  'division\.py$',
  'division_annotated\.py$',
  'signup\.py$',
  'duck\.py$',
]

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[tool.coverage.run]
omit = [
  "pysmo/lib/io/_sacio/_render_sacio.py",
  ]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "plt.show()",
    "plt.savefig(.*)",
    ]

[tool.black]
target-version = [
  "py312",
  "py313",
]

[tool.ruff]
line-length = 88
extend-exclude = ["utils/templates"]

[tool.ruff.lint.per-file-ignores]
"pysmo/lib/io/_sacio/_sacio_rendered.py" = ["E741"]
"docs/first-steps/tutorial/tutorial.ipynb" = ["F811"]
