[project]
name = "pysmo"
version = "1.0.0-dev1"
description = "Python module for seismologists."
authors = [{ name = "Simon M. Lloyd", email = "simon@slloyd.net" }]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "pyproj>=3.7.2",
    "attrs>=25.4.0",
    "attrs-strict>=1.0.1",
    "cattrs>=25.3.0",
    "scipy-stubs>=1.16.2.3",
    "scipy>=1.16.2",
    "beartype>=0.22.9",
]

[project.urls]
Documentation = "https://docs.pysmo.org"

[dependency-groups]
dev = [
    "black[jupyter]>=25.9.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
]
test = [
    "pytest>=8.4.2",
    "pytest-mpl>=0.17.0",
    "pytest-cov>=6.3.0",
    "pytest-mypy>=1.0.1",
    "pytest-depends>=1.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-cases>=3.9.1",
    "sybil[pytest]>=9.2.0",
    "syrupy>=4.9.1",
    "nbmake>=1.5.5",
    "ruff>=0.11.13",
]
docs = [
    "mike>=2.1.3",
    "mkdocs-material>=9.6.22",
    "mkdocs-jupyter>=0.25.1",
    "jupyterlab>=4.4.9",
    "markdown-include>=0.8.1",
    "ipython>=9.6.0",
    "termynal>=0.13.1",
    "mkdocs-bibtex>=4.4.0",
    "griffe-fieldz>=0.2.1",
    "watchdog>=6.0.0",
    "zensical>=0.0.10",
    "mkdocstrings-python>=2.0.1",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
    "docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pysmo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
    "docs"
]
filterwarnings = [
  "ignore::UserWarning"
]
mpl-generate-summary = "html"
mpl-use-full-test-name = true
addopts = "-p no:doctest"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
  'division\.py$',
  'division_annotated\.py$',
  'signup\.py$',
  'duck\.py$',
]

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[tool.coverage.run]
source = ["src"]
omit = [
  "src/pysmo/lib/io/_sacio/_render_sacio.py",
  ]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "plt.show()",
    "plt.savefig(.*)",
    ]

[tool.black]
target-version = [
  "py312",
  "py313",
  "py314",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"src/pysmo/lib/io/_sacio/_sacio_rendered.py" = ["E741"]
"docs/first-steps/tutorial/tutorial.ipynb" = ["F811"]
